Html overflow fixed for scroll

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@
   --text-color: #4c4c4c;
 }
 
+html {
+  /** to prevent tilt on scroll visible */
+  overflow-y: scroll;
+}
+
 body {
   margin: 0;
   font-family: "Sarabun", sans-serif;
@@ -18,4 +23,23 @@ body {
 *:before,
 *:after {
   box-sizing: border-box;
+}
+
+/** Scrollbar Styles */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #bebebe;
+  border-radius: 10px;
+  border: 3px white solid;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--primary-color);
 }
